--- a/Linux Exercices/Démos/Services/1.Service Deamon.md
+++ b/Linux Exercices/Démos/Services/1.Service Deamon.md
@@ -201,8 +201,8 @@ Nous allons configurer un timer pour exécuter le script de surveillance à des 
 Description=Run check-myapp.service every 5 minutes
 
 [Timer]
-OnBootSec=2min  # Attendre 2 minutes après le démarrage
-OnUnitActiveSec=5min  # Exécuter toutes les 5 minutes
+OnCalendar=Sun *-*-* 00:00:00
+Persistent=true
 
 [Install]
 WantedBy=timers.target
