--- a/Linux Exercices/Démos/4.CRON.md
+++ b/Linux Exercices/Démos/4.CRON.md
@@ -368,16 +368,18 @@ Continuons avec des exercices de plus en plus avancés jusqu'à atteindre 20. Vo
 
   **Contenu du script `rapport_systeme.sh`** :
   
-
-   #!/bin/bash
-  echo "Rapport Système du $(date)" > /home/user/reports/system_report
-
-    _$(date +\%Y-\%m-\%d).txt
-  df -h >> /home/user/reports/system_report_$(date +\%Y-\%m-\%d).txt
-  free -h >> /home/user/reports/system_report_$(date +\%Y-\%m-\%d).txt
-  top -bn1 | head -10 >> /home/user/reports/system_report_$(date +\%Y-\%m-\%d).txt
-
-  mail -s "Rapport Système" user@example.com < /home/user/reports/system_report_$(date +\%Y-\%m-\%d).txt
+``` bash
+    #!/bin/bash
+    echo "Rapport Système du $(date)" > /home/user/reports/system_report
+  
+      _$(date +\%Y-\%m-\%d).txt
+    df -h >> /home/user/reports/system_report_$(date +\%Y-\%m-\%d).txt
+    free -h >> /home/user/reports/system_report_$(date +\%Y-\%m-\%d).txt
+    top -bn1 | head -10 >> /home/user/reports/system_report_$(date +\%Y-\%m-\%d).txt
+  
+    mail -s "Rapport Système" user@example.com < /home/user/reports/system_report_$(date +\%Y-\%m-\%d).txt
+```
+ 
   
 
   **Explication** :
